# asiandrama.py

./: .pdm.toml  README.md  cli.py  fetch.py  pyproject.toml
asiandrama/: __init__.py
asiandrama/base/: response.py  scraper.py
asiandrama/kshow123/: base.py  search.py  show.py
asiandrama/watchasian/: drama.py  search.py
base/: __init__.py  scraper.py
kshow123/: __init__.py  base.py  show.py
watchasian/: __init__.py  base.py  drama.py  search.py
