[project]
name = ""
version = ""
description = ""
authors = [
    {name = "TheBoringDude", email = "iamcoderx@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
