[project]
name = "watchasian.py"
version = "0.0.1"
description = ""
authors = [
    {name = "TheBoringDude", email = "iamcoderx@gmail.com"},
]
dependencies = [
    "smax>=0.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
