[tool.poetry]
name = "asiandrama"
version = "0.0.1"
description = "Korean shows and drama websites scraper library."
authors = ["TheBoringDude <iamcoderx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
smaxpy = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
